--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-URI = mongodb+srv://IsraelBejar:AXH1n6IyiFmWCcSR@clusternew2024.0xghzej.mongodb.net/sample_airbnb
+MONGO_URI = mongodb+srv://IsraelBejar:AXH1n6IyiFmWCcSR@clusternew2024.0xghzej.mongodb.net/sample_airbnb
