--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 MONGO_URI = mongodb+srv://IsraelBejar:AXH1n6IyiFmWCcSR@clusternew2024.0xghzej.mongodb.net/sample_airbnb
+GITHUB_CLIENT_SECRET = d8a94dd1a8a95a846e3170ab78da0a2f62f493d1
+GITHUB_CLIENT_ID = f9aa880545e54b8a2dfe
+CALLBACK_URL = http://localhost:3000/github/callback
